--- a/Lavendieksam_RadionovTARpe17/Lavendieksam_RadionovTARpe17.csproj
+++ b/Lavendieksam_RadionovTARpe17/Lavendieksam_RadionovTARpe17.csproj
@@ -183,6 +183,7 @@
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\Kitarr.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\Plaat.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
