--- a/Lavendieksam_RadionovTARpe17/Lavendieksam_RadionovTARpe17.csproj
+++ b/Lavendieksam_RadionovTARpe17/Lavendieksam_RadionovTARpe17.csproj
@@ -175,6 +175,7 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\KitarridController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -243,6 +244,11 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Kitarrid\Create.cshtml" />
+    <Content Include="Views\Kitarrid\Delete.cshtml" />
+    <Content Include="Views\Kitarrid\Details.cshtml" />
+    <Content Include="Views\Kitarrid\Edit.cshtml" />
+    <Content Include="Views\Kitarrid\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
